cabal-version: 2.2
name:          hstream
version:       0.1.0.0
synopsis:
  High performance stream processing platform for IoT data written in Haskell.

description:
  Please see the README on GitHub at
  <https://github.com/hstreamdb/hstream#readme>

license:       BSD-3-Clause
license-file:  LICENSE
copyright:     Copyright (c) 2020 EMQ Technologies Co., Ltd.
author:        Feng Lee <feng@emqx.io>
maintainer:    lambda@emqx.io, wangbin@emqx.io
tested-with:   GHC ==8.10.4
category:      Database
homepage:      https://github.com/hstreamdb/hstream
bug-reports:   https://github.com/hstreamdb/hstream/issues
build-type:    Simple

source-repository head
  type:     git
  location: https://github.com/hstreamdb/hstream

flag ReleaseBuild
  default:     False
  description:
    Enables all optimisations, leads to slower build time and better performance

common shared-properties
  ghc-options:
    -Wall -Wcompat -Widentities -Wincomplete-record-updates
    -Wincomplete-uni-patterns -Wpartial-fields -Wredundant-constraints

  if flag(releasebuild)
    ghc-options:
      -feager-blackholing -flate-dmd-anal -flate-specialise
      -fspec-constr-keen -fstatic-argument-transformation
      -funbox-strict-fields -O2

library
  import:             shared-properties
  exposed-modules:
    HStream.Client.Action
    HStream.Client.Execute
    HStream.Client.Gadget
    HStream.Client.Internal
    HStream.Client.Type
    HStream.Client.Utils
    HStream.Server.Config
    HStream.Server.Exception
    HStream.Server.Handler
    HStream.Server.Handler.Common
    HStream.Server.Initialization
    HStream.Server.InternalHandler
    HStream.Server.Persistence
    HStream.Server.Persistence.Exception
    HStream.Server.Types
    HStream.Server.ReaderPool
    HStream.Server.Shard

  other-modules:
    HStream.Server.Core.Common
    HStream.Server.Core.Stream
    HStream.Server.Core.Subscription
    HStream.Server.Core.View
    HStream.Server.Handler.Admin
    HStream.Server.Handler.Cluster
    HStream.Server.Handler.Connector
    HStream.Server.Handler.Query
    HStream.Server.Handler.Stats
    HStream.Server.Handler.StoreAdmin
    HStream.Server.Handler.Stream
    HStream.Server.Handler.Subscription
    HStream.Server.Handler.View
    HStream.Server.Persistence.Common
    HStream.Server.Persistence.MemoryStore
    HStream.Server.Persistence.Object
    HStream.Server.Persistence.Tasks
    HStream.Server.Persistence.Utils

  hs-source-dirs:     src
  build-depends:
    , aeson
    , aeson-pretty
    , ansi-terminal
    , async
    , attoparsec
    , base
    , bytestring
    , clickhouse-haskell
    , containers
    , deepseq
    , directory
    , grpc-haskell
    , grpc-haskell-core
    , hashable
    , haxl
    , hstream-admin
    , hstream-common
    , hstream-common-stats
    , hstream-connector
    , hstream-gossip
    , hstream-processing
    , hstream-sql
    , hstream-store
    , microlens
    , microlens-aeson
    , mysql-haskell
    , network
    , optparse-applicative
    , proto3-suite
    , proto3-wire
    , rio
    , scientific
    , statgrab
    , stm
    , suspend
    , table-layout
    , text
    , time
    , timers
    , unordered-containers
    , uuid
    , vector
    , yaml
    , Z-Data
    , Z-IO
    , zoovisitor
    , cryptonite
    , memory

  default-language:   Haskell2010
  default-extensions:
    DeriveGeneric
    DerivingStrategies
    EmptyDataDeriving
    GADTSyntax
    GeneralizedNewtypeDeriving
    LambdaCase
    OverloadedStrings
    RecordWildCards
    ScopedTypeVariables
    TypeApplications
    UnliftedFFITypes

executable hstream-server
  import:           shared-properties
  main-is:          app/server.hs
  build-depends:
    , base
    , bytestring
    , containers
    , deepseq
    , grpc-haskell
    , grpc-haskell-core
    , hstream
    , hstream-admin
    , hstream-common
    , hstream-common-stats
    , hstream-gossip
    , hstream-store
    , optparse-applicative
    , proto3-suite
    , proto3-wire
    , raw-strings-qq
    , stm
    , suspend
    , text
    , timers
    , vector
    , Z-Data
    , Z-IO
    , zoovisitor
    , cryptonite
    , memory

  default-language: Haskell2010
  ghc-options:
    -threaded -rtsopts "-with-rtsopts=-N -A64m -n4m -qg -qn1"

executable hstream-client
  import:           shared-properties
  main-is:          app/client.hs
  build-depends:
    , ansi-terminal
    , base
    , bytestring
    , containers
    , grpc-haskell
    , grpc-haskell-core
    , haskeline
    , hstream
    , hstream-common
    , hstream-common-stats
    , hstream-sql
    , hstream-store
    , network
    , optparse-applicative
    , random
    , raw-strings-qq
    , text
    , unix
    , vector
    , Z-Data
    , Z-IO

  default-language: Haskell2010
  ghc-options:      -threaded -rtsopts -with-rtsopts=-N

test-suite hstream-test
  import:             shared-properties
  type:               exitcode-stdio-1.0
  main-is:            Spec.hs
  other-modules:
    HStream.AckSpec
    HStream.AdminCommandSpec
    HStream.HandlerSpec
    HStream.RegressionSpec
    HStream.RunQuerySpec
    HStream.RunSQLSpec
    HStream.RunStoreAdminSpec
    HStream.SpecUtils
    HStream.StatsIntegrationSpec
    HStream.ShardSpec

  hs-source-dirs:     test
  build-depends:
    , aeson
    , async
    , base                  >=4.11 && <5
    , bytestring
    , clickhouse-haskell
    , containers
    , grpc-haskell
    , grpc-haskell-core
    , hspec
    , hstream
    , hstream-common
    , hstream-common-stats
    , hstream-sql
    , hstream-store
    , io-streams
    , mysql-haskell
    , proto3-suite
    , random                ^>=1.2
    , scientific
    , text
    , unordered-containers
    , vector
    , Z-Data
    , Z-IO
    , zoovisitor
    , QuickCheck

  default-language:   Haskell2010
  default-extensions:
    DeriveGeneric
    DerivingStrategies
    EmptyDataDeriving
    GADTSyntax
    GeneralizedNewtypeDeriving
    LambdaCase
    OverloadedStrings
    RecordWildCards
    ScopedTypeVariables
    TypeApplications
    UnliftedFFITypes

  build-tool-depends: hspec-discover:hspec-discover ==2.*
  ghc-options:        -threaded -rtsopts -with-rtsopts=-N
