cabal-version: 2.2
name:          hstream
version:       0.1.0.0
synopsis:
  High performance stream processing platform for IoT data written in Haskell.

description:
  Please see the README on GitHub at
  <https://github.com/hstreamdb/hstream#readme>

license:       BSD-3-Clause
license-file:  LICENSE
copyright:     Copyright (c) 2020 EMQ Technologies Co., Ltd.
author:        Feng Lee <feng@emqx.io>
maintainer:    lambda@emqx.io, wangbin@emqx.io
tested-with:   GHC ==9.2.7
category:      Database
homepage:      https://github.com/hstreamdb/hstream
bug-reports:   https://github.com/hstreamdb/hstream/issues
build-type:    Simple

source-repository head
  type:     git
  location: https://github.com/hstreamdb/hstream

flag ReleaseBuild
  default:     False
  description:
    Enables all optimisations, leads to slower build time and better performance

flag hstream_use_grpc_haskell
  default:     False
  description: Use grpc_haskell instead

flag hstream_use_v2_engine
  default:     False
  description: Use v2 processing engine

common shared-properties
  ghc-options:
    -Wall -Wcompat -Widentities -Wincomplete-record-updates
    -Wincomplete-uni-patterns -Wpartial-fields -Wredundant-constraints

  if flag(releasebuild)
    ghc-options:
      -feager-blackholing -flate-dmd-anal -flate-specialise
      -fspec-constr-keen -fstatic-argument-transformation
      -funbox-strict-fields -O2

  if flag(hstream_use_v2_engine)
    cpp-options: -DHStreamUseV2Engine

library
  import:             shared-properties
  exposed-modules:
    HStream.Client.Action
    HStream.Client.Execute
    HStream.Client.Internal
    HStream.Client.SQL
    HStream.Client.Types
    HStream.Client.Utils
    HStream.Server.Config
    HStream.Server.ConnectorTypes
    HStream.Server.Core.Cluster
    HStream.Server.Core.Common
    HStream.Server.Exception
    HStream.Server.Handler
    HStream.Server.Handler.Common
    HStream.Server.HsGrpcHandler
    HStream.Server.HStore
    HStream.Server.Initialization
    HStream.Server.MetaData
    HStream.Server.QueryWorker
    HStream.Server.Shard
    HStream.Server.Types
    HStream.Server.Validation

  other-modules:
    HStream.Server.Core.Query
    HStream.Server.Core.ShardReader
    HStream.Server.Core.Stream
    HStream.Server.Core.Subscription
    HStream.Server.Core.View
    HStream.Server.Handler.Admin
    HStream.Server.Handler.Cluster
    HStream.Server.Handler.Connector
    HStream.Server.Handler.Extra
    HStream.Server.Handler.Query
    HStream.Server.Handler.ShardReader
    HStream.Server.Handler.Stats
    HStream.Server.Handler.Stream
    HStream.Server.Handler.Subscription
    HStream.Server.Handler.View
    HStream.Server.MetaData.Exception
    HStream.Server.MetaData.Types
    HStream.Server.MetaData.Utils
    HStream.Server.MetaData.Value

  hs-source-dirs:     src
  build-depends:
    , aeson
    , aeson-pretty
    , ansi-terminal
    , async
    , attoparsec
    , base
    , bytestring
    , containers
    , cryptohash-md5
    , cryptonite
    , data-default
    , deepseq
    , diff-flow
    , directory
    , filelock
    , grpc-haskell
    , grpc-haskell-core
    , hashable
    , haskeline
    , hs-grpc-server
    , hstream-admin-server
    , hstream-api-hs
    , hstream-common
    , hstream-common-base
    , hstream-common-stats
    , hstream-gossip
    , hstream-io
    , hstream-processing
    , hstream-sql
    , hstream-store
    , memory
    , microlens
    , microlens-aeson
    , network
    , network-uri
    , optparse-applicative
    , proto3-suite
    , proto3-wire
    , raw-strings-qq
    , rocksdb-haskell-bindings
    , scientific
    , statgrab
    , stm
    , string-random
    , suspend
    , table-layout
    , text
    , time
    , timers
    , unix
    , unordered-containers
    , uuid
    , vector
    , vector-algorithms
    , yaml
    , Z-Data
    , zoovisitor
    , split

  if impl(ghc <9.2.0)
    build-depends: hstream-admin-store

  default-language:   Haskell2010
  default-extensions:
    DeriveGeneric
    DerivingStrategies
    EmptyDataDeriving
    GADTSyntax
    GeneralizedNewtypeDeriving
    LambdaCase
    OverloadedStrings
    RecordWildCards
    ScopedTypeVariables
    TypeApplications
    UnliftedFFITypes

executable hstream-server
  import:           shared-properties
  main-is:          app/server.hs
  build-depends:
    , async
    , base
    , bytestring
    , containers
    , cryptonite
    , deepseq
    , grpc-haskell
    , grpc-haskell-core
    , hs-grpc-server
    , hstream
    , hstream-admin-server
    , hstream-api-hs
    , hstream-common
    , hstream-common-base
    , hstream-common-stats
    , hstream-gossip
    , hstream-store
    , http-client
    , memory
    , optparse-applicative
    , proto3-suite
    , proto3-wire
    , raw-strings-qq
    , stm
    , suspend
    , text
    , timers
    , vector
    , Z-Data
    , zoovisitor

  if flag(hstream_use_grpc_haskell)
    cpp-options: -DHStreamUseGrpcHaskell

  default-language: Haskell2010
  ghc-options:
    -threaded -rtsopts "-with-rtsopts=-N -A64m -n4m -qg -qn1"

executable hstream
  import:           shared-properties
  main-is:          app/client.hs
  build-depends:
    , aeson
    , ansi-terminal
    , base
    , bytestring
    , containers
    , grpc-haskell
    , grpc-haskell-core
    , haskeline
    , hstream
    , hstream-admin-server
    , hstream-api-hs
    , hstream-common
    , hstream-common-base
    , hstream-common-stats
    , hstream-sql
    , hstream-store
    , network
    , optparse-applicative
    , random
    , raw-strings-qq
    , text
    , unix
    , unordered-containers
    , vector
    , Z-Data
    , split

  default-language: Haskell2010
  ghc-options:      -threaded -rtsopts -with-rtsopts=-N

test-suite hstream-test
  import:             shared-properties
  type:               exitcode-stdio-1.0
  main-is:            Spec.hs
  other-modules:
    HStream.AckSpec
    HStream.AdminCommandSpec
    HStream.ConfigSpec
    HStream.HandlerSpec
    HStream.RegressionSpec
    HStream.RunQuerySpec
    HStream.RunSQLSpec
    HStream.ShardSpec
    HStream.SpecUtils
    HStream.StatsIntegrationSpec

  hs-source-dirs:     test
  build-depends:
    , aeson
    , aeson-pretty
    , async
    , base                  >=4.11 && <5
    , bytestring
    , containers
    , grpc-haskell
    , grpc-haskell-core
    , hspec
    , hstream
    , hstream-api-hs
    , hstream-common
    , hstream-common-base
    , hstream-common-stats
    , hstream-gossip
    , hstream-io
    , hstream-sql
    , hstream-store
    , io-streams
    , proto3-suite
    , QuickCheck
    , random                ^>=1.2
    , scientific
    , text
    , unix
    , unordered-containers
    , vector
    , yaml
    , Z-Data
    , zoovisitor

  if impl(ghc <9.2.0)
    build-depends: hstream-admin-store

  default-language:   Haskell2010
  default-extensions:
    DeriveGeneric
    DerivingStrategies
    EmptyDataDeriving
    GADTSyntax
    GeneralizedNewtypeDeriving
    LambdaCase
    OverloadedStrings
    RecordWildCards
    ScopedTypeVariables
    TypeApplications
    UnliftedFFITypes

  build-tool-depends: hspec-discover:hspec-discover >=2 && <3
  ghc-options:        -threaded -rtsopts -with-rtsopts=-N
