cabal-version:      2.4
name:               hstream-api-protolens
version:            0.1.0.0
synopsis:
  High performance stream processing platform for IoT data written in Haskell.

description:
  Please see the README on GitHub at
  <https://github.com/hstreamdb/hstream#readme>

license:            BSD-3-Clause
copyright:          Copyright (c) 2020 EMQ Technologies Co., Ltd.
author:             Feng Lee <feng@emqx.io>
maintainer:         lambda@emqx.io
tested-with:        GHC ==8.10.7
category:           Database
homepage:           https://github.com/hstreamdb/hstream
bug-reports:        https://github.com/hstreamdb/hstream/issues
build-type:         Custom
extra-source-files: protos/**/*.proto

custom-setup
  setup-depends:
    , base              >=4.5 && <5
    , Cabal             >=2.4 && <4
    , proto-lens-setup  ^>=0.4

source-repository head
  type:     git
  location: https://github.com/hstreamdb/hstream

flag ReleaseBuild
  default:     False
  description:
    Enables all optimisations, leads to slower build time and better performance

common shared-properties
  ghc-options:
    -Wall -Wcompat -Widentities -Wincomplete-record-updates
    -Wincomplete-uni-patterns -Wpartial-fields -Wredundant-constraints

  if flag(releasebuild)
    ghc-options:
      -feager-blackholing -flate-dmd-anal -flate-specialise
      -fspec-constr-keen -fstatic-argument-transformation
      -funbox-strict-fields -O2

library
  import:           shared-properties
  exposed-modules:
    Proto.HStream.Server.HStreamApi
    Proto.HStream.Server.HStreamApi_Fields
    Proto.HStream.Server.HStreamInternal
    Proto.HStream.Server.HStreamInternal_Fields
    Proto.HStream.Gossip.HStreamGossip
    Proto.HStream.Gossip.HStreamGossip_Fields

  autogen-modules:
    Proto.HStream.Server.HStreamApi
    Proto.HStream.Server.HStreamApi_Fields
    Proto.HStream.Server.HStreamInternal
    Proto.HStream.Server.HStreamInternal_Fields
    Proto.HStream.Gossip.HStreamGossip
    Proto.HStream.Gossip.HStreamGossip_Fields

  build-depends:
    , base                       >=4.13    && <5
    , bytestring
    , microlens
    , proto-lens-protobuf-types  ^>=0.7.1.2
    , proto-lens-runtime

  default-language: Haskell2010
