cabal-version:      3.6
name:               hstream-common-base
version:            0.1.0.0
synopsis:
  High performance stream processing platform for IoT data written in Haskell.

description:
  Please see the README on GitHub at
  <https://github.com/hstreamdb/hstream#readme>

license:            BSD-3-Clause
license-file:       LICENSE
copyright:          Copyright (c) 2020 EMQ Technologies Co., Ltd.
author:             Mu <lambda@emqx.io>
maintainer:         lambda@emqx.io
tested-with:        GHC ==9.2.5
category:           Database
homepage:           https://github.com/hstreamdb/hstream
bug-reports:        https://github.com/hstreamdb/hstream/issues
build-type:         Simple
extra-source-files: include/**/*.h

source-repository head
  type:     git
  location: https://github.com/hstreamdb/hstream

flag ReleaseBuild
  default:     False
  description:
    Enables all optimisations, leads to slower build time and better performance

flag build_old_log
  default: False

common shared-properties
  ghc-options:
    -Wall -Wcompat -Widentities -Wincomplete-record-updates
    -Wincomplete-uni-patterns -Wpartial-fields -Wredundant-constraints
    -Wunused-packages

  if flag(releasebuild)
    ghc-options:
      -feager-blackholing -flate-dmd-anal -flate-specialise
      -fspec-constr-keen -fstatic-argument-transformation
      -funbox-strict-fields -O2

library
  import:             shared-properties
  exposed-modules:
    HStream.Base
    HStream.Base.Ansi
    HStream.Base.Bytes
    HStream.Base.Table
    HStream.Base.Time
    HStream.Foreign
    HStream.Logger

  if flag(build_old_log)
    exposed-modules: HStream.LoggerOld

  hs-source-dirs:     .
  include-dirs:       include /usr/local/include
  install-includes:
    hs_common.h
    hs_cpp_lib.h

  cxx-sources:
    cbits/fatalsignal.cpp
    cbits/hs_struct.cpp
    cbits/hs_utils.cpp

  build-tool-depends:
    , cpphs:cpphs    ^>=1.20
    , hsc2hs:hsc2hs

  build-depends:
    , ansi-terminal
    , async
    , base           >=4.11   && <5
    , bytestring
    , containers
    , data-default
    , fast-logger
    , ghc-prim       >=0.5    && <1.0
    , primitive      ^>=0.7.2
    , random
    , table-layout
    , text
    , time
    , unix
    , unix-time
    , Z-Data

  if flag(build_old_log)
    build-depends: Z-IO ==2.0.0.0

  cxx-options:        -std=c++17 -Werror=switch
  extra-lib-dirs:     /usr/local/lib
  extra-libraries:
    stdc++
    atomic
    grpc++
    gpr
    grpc++_reflection
    protobuf
    folly
    logdevice
    ldquery
    glog
    boost_context

  default-language:   Haskell2010
  default-extensions:
    EmptyDataDeriving
    GADTSyntax
    LambdaCase
    OverloadedStrings
    RecordWildCards
    ScopedTypeVariables
    TypeApplications
    UnliftedFFITypes
    UnliftedNewtypes

test-suite hstream-common-base-test
  import:             shared-properties
  type:               exitcode-stdio-1.0
  main-is:            Spec.hs
  hs-source-dirs:     test
  other-modules:      HStream.BaseSpec
  build-depends:
    , aeson
    , base                  >=4.11 && <5
    , bytestring
    , containers            ^>=0.6
    , directory
    , hspec
    , hstream-common-base
    , QuickCheck
    , quickcheck-instances
    , random                ^>=1.2
    , text
    , unordered-containers
    , vector
    , Z-Data

  default-extensions:
    DeriveGeneric
    DerivingStrategies
    EmptyDataDeriving
    GADTSyntax
    GeneralizedNewtypeDeriving
    LambdaCase
    OverloadedStrings
    RecordWildCards
    ScopedTypeVariables
    TypeApplications

  default-language:   Haskell2010
  build-tool-depends: hspec-discover:hspec-discover >=2 && <3
  ghc-options:        -threaded -rtsopts -with-rtsopts=-N
