cabal-version:      2.4
name:               hstream-common-metrics
version:            0.1.0.0
synopsis:
  High performance stream processing platform for IoT data written in Haskell.

description:
  Please see the README on GitHub at
  <https://github.com/hstreamdb/hstream#readme>

license:            BSD-3-Clause
license-file:       LICENSE
copyright:          Copyright (c) 2020 EMQ Technologies Co., Ltd.
author:             YangKian
maintainer:         YangKian <qinyao.yang.emqx.io>
tested-with:        GHC ==8.10.7
category:           Database
homepage:           https://github.com/hstreamdb/hstream
bug-reports:        https://github.com/hstreamdb/hstream/issues
extra-source-files: CHANGELOG.md

library 
  exposed-modules:
    HStream.Metrics.ShardMetrics
    HStream.Metrics.StreamMetrics
    HStream.Metrics.SubMetrics

  build-depends:    
      base 
    , prometheus-client
    , prometheus-metrics-ghc
    , wai-middleware-prometheus
  hs-source-dirs: src
  default-language: Haskell2010
