cabal-version:      2.4
name:               hstream-common-stats
version:            0.1.0.0
synopsis:
  High performance stream processing platform for IoT data written in Haskell.

description:
  Please see the README on GitHub at
  <https://github.com/hstreamdb/hstream#readme>

license:            BSD-3-Clause
license-file:       LICENSE
copyright:          Copyright (c) 2020 EMQ Technologies Co., Ltd.
author:             Feng Lee <feng@emqx.io>
maintainer:         lambda@emqx.io
tested-with:        GHC ==8.10.7
category:           Database
homepage:           https://github.com/hstreamdb/hstream
bug-reports:        https://github.com/hstreamdb/hstream/issues
build-type:         Custom
extra-source-files:
  cbits/**/*.h
  include/*.h
  include/**/*.inc

custom-setup
  setup-depends:
    , base   >=4.5 && <5
    , Cabal  >=2.4 && <4

source-repository head
  type:     git
  location: https://github.com/hstreamdb/hstream

flag ReleaseBuild
  default:     False
  description:
    Enables all optimisations, leads to slower build time and better performance

common shared-properties
  ghc-options:
    -Wall -Wcompat -Widentities -Wincomplete-record-updates
    -Wincomplete-uni-patterns -Wpartial-fields -Wredundant-constraints

  if flag(releasebuild)
    ghc-options:
      -feager-blackholing -flate-dmd-anal -flate-specialise
      -fspec-constr-keen -fstatic-argument-transformation
      -funbox-strict-fields -O2

library
  import:             shared-properties
  exposed-modules:    HStream.Stats
  other-modules:      HStream.Stats.Internal
  hs-source-dirs:     .
  include-dirs:       . include /usr/local/include
  cxx-sources:
    cbits/stats/Stats.cpp
    cbits/hs_stats.cpp

  build-tool-depends: hsc2hs:hsc2hs -any, cpphs:cpphs >=1.20 && <1.21
  build-depends:
    , aeson
    , ansi-terminal
    , attoparsec
    , base                  >=4.11  && <5
    , bytestring
    , casing                >=0.1.4
    , containers
    , data-default
    , deepseq
    , digest
    , ghc-prim              >=0.5   && <1.0
    , hashable
    , hstream-common
    , primitive             ^>=0.7
    , random
    , scientific
    , table-layout
    , text
    , time
    , unordered-containers
    , vector
    , Z-Data
    , Z-IO

  cxx-options:        -std=c++17
  cpp-options:        -std=c++17
  extra-lib-dirs:     /usr/local/lib
  extra-libraries:
    stdc++
    atomic
    folly
    logdevice
    ldquery
    glog
    boost_context

  default-language:   Haskell2010
  default-extensions:
    EmptyDataDeriving
    GADTSyntax
    LambdaCase
    OverloadedStrings
    RecordWildCards
    ScopedTypeVariables
    TypeApplications
    UnliftedFFITypes
    UnliftedNewtypes

test-suite hstream-common-stats-test
  import:             shared-properties
  type:               exitcode-stdio-1.0
  main-is:            Spec.hs
  hs-source-dirs:     test
  other-modules:
    HStream.StatsSpec
    HStream.StatsSpecUtils
  build-depends:
    , base                  >=4.11 && <5
    , containers            ^>=0.6
    , hspec
    , hstream-common
    , hstream-common-stats
    , QuickCheck
    , random                ^>=1.2
    , text
    , unordered-containers
    , Z-Data
    , Z-IO

  default-extensions:
    DeriveGeneric
    DerivingStrategies
    EmptyDataDeriving
    GADTSyntax
    GeneralizedNewtypeDeriving
    LambdaCase
    OverloadedStrings
    RecordWildCards
    ScopedTypeVariables
    TypeApplications

  default-language:   Haskell2010
  build-tool-depends: hspec-discover:hspec-discover ==2.*
  ghc-options:        -threaded -rtsopts -with-rtsopts=-N

benchmark common-bench-stats
  import:             shared-properties
  type:               exitcode-stdio-1.0
  main-is:            stats.hs
  hs-source-dirs:     bench
  build-depends:
    , base                  >=4.11 && <5
    , bytestring            ^>=0.10
    , criterion             ^>=1.5
    , hstream-common
    , hstream-common-stats
    , Z-Data

  default-extensions:
    DeriveGeneric
    DerivingStrategies
    EmptyDataDeriving
    GADTSyntax
    GeneralizedNewtypeDeriving
    LambdaCase
    OverloadedStrings
    RecordWildCards
    ScopedTypeVariables
    TypeApplications
    UnliftedFFITypes

  default-language:   Haskell2010
  ghc-options:        -threaded -rtsopts -with-rtsopts=-N
